# python-roboticeclient

./: ChangeLog  HISTORY.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: Makefile  make.bat
docs/source/: conf.py  contributors.rst  index.rst  tasks.rst
docs/source/control/: overview.rst
roboticeclient/: __init__.py  client.py  exceptions.py
roboticeclient/common/: _i18n.py  client.py  django.py  horizon.py  manager.py
roboticeclient/control/: client.py  shell.py
roboticeclient/control/v1/: base.py
roboticeclient/control/v1/managers/: actions.py  auth.py  base.py  const.py  device_catalog.py  devices.py  hosts.py  identity.py  locations.py  plans.py  systems.py  tasks.py  users.py  workers.py
roboticeclient/robotice/: client.py
roboticeclient/robotice/v1/: base.py
roboticeclient/robotice/v1/managers/: actions.py  base.py  devices.py  plans.py  systems.py  tasks.py  workers.py
roboticeclient/utils/: dotdict.py
