[metadata]
name = python-roboticeclient 
summary = Python HTTP Robotice Client
description-file =
    README.rst
author = Michael Kuty
author-email = mail@majklk.cz
home-page = https://github.com/robotice/python-roboticeclient
classifier =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    roboticeclient

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1